[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player 1.gd" type="Script" id=2]

[node name="player_1" type="Node"]
script = ExtResource( 2 )

[node name="player" type="Node" parent="."]

[node name="slot_1" type="Sprite" parent="player"]
visible = false
position = Vector2( 624, 48 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_2" type="Sprite" parent="player"]
visible = false
position = Vector2( 624, 160 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_3" type="Sprite" parent="player"]
visible = false
position = Vector2( 624, 272 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_4" type="Sprite" parent="player"]
visible = false
position = Vector2( 624, 384 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="slot_5" type="Sprite" parent="player"]
visible = false
position = Vector2( 624, 496 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="enemy" type="Node" parent="."]

[node name="enemy_slot_1" type="Sprite" parent="enemy"]
visible = false
position = Vector2( 2282.25, 37.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="enemy_slot_2" type="Sprite" parent="enemy"]
visible = false
position = Vector2( 2282.25, 149.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="enemy_slot_3" type="Sprite" parent="enemy"]
visible = false
position = Vector2( 2282.25, 261.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="enemy_slot _4" type="Sprite" parent="enemy"]
visible = false
position = Vector2( 2282.25, 373.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="enemy_slot_5" type="Sprite" parent="enemy"]
visible = false
position = Vector2( 2282.25, 485.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="other" type="Node" parent="."]

[node name="current_character" type="Sprite" parent="other"]
visible = false
position = Vector2( 1860.5, 75.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="targeted_character" type="Sprite" parent="other"]
visible = false
position = Vector2( 2148.5, 75.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="attack_1" type="Sprite" parent="other"]
visible = false
position = Vector2( 1475, 653 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="attack_2" type="Sprite" parent="other"]
visible = false
position = Vector2( 1619, 653 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )

[node name="attack_3" type="Sprite" parent="other"]
visible = false
position = Vector2( 1763, 653 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( -369.5, 17.5 )
